# clinical-ComBAT

./: .gitignore  0-CamCAN_cleaning_pipeline.ipynb  1-Site_compilation_pipeline.ipynb  10-Harmonization_visualization_pipeline.ipynb  2-Site_split_pipeline.ipynb  3-Sites_synthetiques_pipeline.ipynb  4-MAE_robust_pipeline.ipynb  5-Thresholds_pipeline.ipynb  6-MAE_analysis_pipeline copy.ipynb  7-Thresholds_analysis_pipeline.ipynb  8-MLP_training_pipeline.ipynb  9-best.ipynb  ANALYSIS _MAE.ipynb  Augment_data.ipynb  Combination_Metrics.ipynb  Create_fake_sick_impact.ipynb  Distribution_analysis.ipynb  Dockerfile  Définir seuil méthode robuste.ipynb  GFG  MLP.ipynb  MLP_benchmark.ipynb  Manage_sites_csv.ipynb  README.md  adni_sites_with_distances  combat_robust.ipynb  compilation_maker.ipynb  eval_.ipynb  pyproject.toml  requirements.txt  robust.ipynb  setup.py  test_MAE.ipynb  test_distances_MAE_precision.ipynb  tmp_test_MAE_cells.txt
classic_combat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
classic_combat/harmonization/: QuickCombat.py  QuickCombatClassic.py  QuickHarmonizationMethod.py  __init__.py
classic_combat/utils/: scilpy_utils.py
classic_combat/visualization/: plots.py
clinical_combat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clinical_combat/harmonization/: QuickCombat.py  QuickCombatClassic.py  QuickCombatClinic.py  QuickCombatCovBat.py  QuickCombatGam.py  QuickCombatGmm.py  QuickCombatPairwise.py  QuickCombatVanilla.py  QuickHarmonizationMethod.py  __init__.py
clinical_combat/utils/: combatio.py  metrics.py  quality_control.py  robust.py  scilpy_utils.py
clinical_combat/visualization/: plots.py  viz.py
notebooks/: ANALYSIS _MAE.ipynb  ANALYSIS _MAE_SIMPLY.ipynb  Augment_data.ipynb  CAMCAM_QC.ipynb  Combat_GMM_walkthrough.ipynb  Définir seuil méthode robuste.ipynb  MLP_site_generation.ipynb  Manage_sites_csv.ipynb  Model_analysis.ipynb  SEUIL.ipynb  Site_scatter_distributions.ipynb  combat_multi_method_harmonization.ipynb  compilation_maker.ipynb  figure_maker.ipynb  generer_sites_synthetiques.ipynb  notebook_10_visualize_harmonization.py  site_disease_analysis.ipynb  test_MAE.ipynb  test_distances_MAE_precision copy.ipynb  ultimate_precision_tester.ipynb
robust_evaluation_tools/: MLP_train.py  robust_MLP.py  robust_analysis.py  robust_harmonization.py  robust_outlier_detection.py  robust_utils.py  synthectic_sites_generations.py
scripts/: combat_corrupt_data.py  combat_info.py  combat_quick.py  combat_quick_QC.py  combat_quick_apply.py  combat_quick_fit.py  combat_single_subject_harmonization.py  combat_visualize_data.py  combat_visualize_harmonization.py  combat_visualize_model.py  run_combat_classic_batch.py
scripts/tests/: test_combat_quick.py
scripts_dev/: combat_covariates_modify.py  combat_json_viz_manufacturer.py  combat_visualize_density.py  combat_visualize_errors_cohensd.py  combat_visualize_sites_boxplot.py  create_tensor.py
vanilla_combat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+65 files in other folders)
